[gd_scene load_steps=7 format=2]

[ext_resource path="res://Super Grotto Escape Files/Characters/Enemies/sprites/lizard moves/lizard-move1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=2]
[ext_resource path="res://Super Grotto Escape Files/Characters/Enemies/sprites/lizard moves/lizard-move2.png" type="Texture" id=3]
[ext_resource path="res://Super Grotto Escape Files/Characters/Enemies/sprites/lizard moves/lizard-move3.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Damage",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4.5, 7.125 )

[node name="BossEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
animation = "Run"
frame = 1
playing = true
offset = Vector2( 0, -10 )
flip_h = true

[node name="FloorDetection" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 3.875 )
shape = SubResource( 12 )

[node name="LeftRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -15, 0 )

[node name="RightRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )

[node name="TopRay" type="RayCast2D" parent="."]
position = Vector2( -2, 0 )
enabled = true
cast_to = Vector2( 0, -15 )

[node name="PlayerDetection" type="RayCast2D" parent="."]
position = Vector2( 4.76837e-07, 0 )
enabled = true
cast_to = Vector2( -93, 0 )
